--- a/index.html
+++ b/index.html
@@ -1,92 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Lawrence Tabanao</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
-<head>
-  <meta charset="utf-8">
-  <title>Lawrence's Personal Site</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/lawrence.png" alt="Lawrence Tabanao picture" height="200" width="200"></td>
-      <td>
-        <h1>John Lawrence Tabanao</h1>
-        <p><em>Third (Second) Officer working at <strong><a href="https://www.seaspancorp.com/">PTC-Seaspan</a></strong></em></p>
-        <p> Hi I'm John Tabanao! <br> <br> I am currently working as a seafarer while simultaneously learning web development and you've stumbled upon my personal site that I'm currently practicing on.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <p>
-  <ul>
-    <li>Mayflower Learning Center - Kindergarden to Preparatory School</li>
-    <ul>
-      <li> <em>Attended from Year 1999 to 2001</em></li>
-    </ul>
-    <li><a href="https://bloomfield.edu.ph/">Bloomfield Academy</a> - Grade 1 to Grade 6</li>
-    <ul>
-      <li><em>Attended from Year 2001-2007</em></li>
-    </ul>
-    <li><a href="https://spcparanaque.edu.ph/">St. Paul College of Parañaque</a> - First Year HS to Fourth Year HS</li>
-    <ul>
-      <li><em>Attended from Year 2007-2011</em></li>
-    </ul>
-    <li><a href="https://maap.edu.ph/">Maritime Academy of Asia and the Pacific</a> - Bachelor of Science in Marine Transportation </li>
-    <ul>
-      <li><em>Attended from Year 2011 and graduated as part of Class 2015</em></li>
-    </ul>
-  </ul>
-  </p>
-  <hr>
-  <h3>Work Experience</h3>
-  <br>
-  <table>
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>2013-Present</td>
-      <td>3rd Officer at Seaspan Corporation (Manned by Philippine Transmarine Carriers Inc.)</td>
-    </tr>
-    <tr>
-      <td>2022</td>
-      <td>Freelance Coder studying courses at Udemy</td>
-    </tr>
-  </table>
-  <hr>
-  <h3>SKILLS</h3>
-
-        <table cellspacing="10">
-          <tr>
-            <td>Navigation </td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Maintenance Work </td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Coding </td>
-            <td>⭐</td>
-            </tr>
-          </table>
-
-  <hr>
-  <h3>More About Me</h3>
-  <ul>
-    <li><a href="Hobbies.html">My Hobbies</a></li>
-  </ul>
-  <h3>Contact Me</h3>
-  <p>You may contact me or send a message <a href="contactme.html">HERE</a></p>
-  <p>Want to subscribe click <a href="inputs.html">HERE</a></p>
+  </head>
+  <body>
 
 
+    <div id="topsection" class="topcontainer">
+      <img class="cloud2" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm John</h1>
+      <h2>a seafarer / coder</h2>
+      <img class="cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="navbar">
+      <ul class="navlist">
+        <li class="navlink"><a href="#section1"> About Me </a></li>
+        <li class="navlink"><a href="#section2"> Skills </a></li>
+        <li class="navlink"><a href="#section3"> Contact Me </a></li>
+      </ul>
+    </div>
+    <a href="#topsection"> <img class="homebutton" src="images/home.png" alt="homebutton"> </a>
 
-</body>
+    <div id="section1" class="middle-container">
+      <div class="profile">
+        <img class="profpic" src="images/lawrence.png" alt="lawrence-photo">
+        <h2>Hello.</h2>
+        <p>I'm a Third Officer at sea, currently learning how to code and make websites at Udemy.</p>
+      </div>
 
+      <div id="section2" class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="navart" src="images/navart.jpg" alt="navigation-skill-clipart">
+          <h3>Sea Navigation</h3>
+          <p>I've been working as a Seafarer from 2013 and working on my promotion as a Second Officer!</p>
+        </div>
+        <div class="skill-row">
+          <img class="guitarart" src="http://clipart-library.com/data_images/45804.png" alt="guitar-clipart">
+          <h3>Guitar Playing</h3>
+          <p>Loves to play to the guitar and also dreaming of learning to play the drums if time allows!</p>
+        </div>
+      </div>
+      <div id="section3" class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Got any ideas you need help with? </h3>
+        <p>You may send me an email by clicking the link below.</p>
+        <a class="btn" href="mailto:lawrencetabanao@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/"><img class="soclogo" src="images/linkedinicon.png" alt="linkedin-logo"> </a>
+      <a class="footer-link" href="https://facebook.com"><img class="soclogo" src="images/fbicon.png" alt="fb-logo"></a>
+      <a class="footer-link" href="https://www.instagram.com/"><img class="soclogo" src="images/instaicon.png" alt="insta-logo"></a>
+      <p>© John Tabanao.</p>
+    </div>
+  </body>
 </html>
